# austral_thesis

./: README.md  pyproject.toml
src/: main.py
src/evaluation/: classification_evaluation.py
src/fine_tuning/: dataset_loader.py  eda.py  fine_tuning.py  tokenize.py
src/silhouette/: dimensionality_reduction.py  silhouette.py
src/utils/: utils.py
