[tool.poetry]
name = "tesis"
version = "0.1.0"
description = ""
authors = ["Federico Méndez Casanave"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llvmlite = "^0.43.0"
umap-learn = "^0.5.6"
torch = "^2.4.0"
datasets = "^2.21.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.23.0"
transformers = "^4.44.2"
ipykernel = "^6.29.5"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
